docs(storybook): adjust storybook

--- a/packages/demo/src/app/instances/instances.mdx
+++ b/packages/demo/src/app/instances/instances.mdx
@@ -13,7 +13,7 @@ import {
 import { NgtMeshLambertMaterialModule } from '@angular-three/core/materials';
 import { NgtInstancedMeshModule } from '@angular-three/core/meshes';
 import {
-  NgtSobaOrbitControls,
+  NgtSobaFlyControlsModule,
   NgtSobaOrbitControlsModule,
 } from '@angular-three/soba/controls';
 import { ChangeDetectionStrategy, Component, NgModule } from '@angular/core';
@@ -22,6 +22,7 @@ import niceColors from 'nice-color-palettes';
 import * as THREE from 'three';
 
 const niceColor = niceColors[Math.floor(Math.random() * 100)];
+
 const size = 125000;
 const tempObject = new THREE.Object3D();
 const tempColor = new THREE.Color();
@@ -49,28 +50,18 @@ const colorArray = Float32Array.from(
       <ngt-spheres></ngt-spheres>
 
       <ngt-soba-orbit-controls
-        #sobaControls="ngtSobaOrbitControls"
-        (ready)="onReady(sobaControls)"
+        (ready)="$event.autoRotate = true; $event.enablePan = false"
       ></ngt-soba-orbit-controls>
     </ngt-canvas>
   `,
   changeDetection: ChangeDetectionStrategy.OnPush,
 })
-export class InstancesComponent {
-  onReady(sobaControls: NgtSobaOrbitControls) {
-    sobaControls.controls.autoRotate = true;
-    sobaControls.controls.enablePan = false;
-  }
-}
+export class InstancesComponent {}
 
 @Component({
   selector: 'ngt-spheres',
   template: `
-    <ngt-instanced-mesh
-      #instancedMesh="ngtInstancedMesh"
-      (ready)="onInstancedMeshReady(instancedMesh.mesh)"
-      [args]="[size]"
-    >
+    <ngt-instanced-mesh (ready)="onInstancedMeshReady($event)" [args]="[size]">
       <ngt-sphere-geometry [args]="[0.15, 8, 6]">
         <ngt-instanced-buffer-attribute
           attach="color"
@@ -114,6 +105,7 @@ export class SpheresComponent {
     NgtMeshLambertMaterialModule,
     NgtSobaOrbitControlsModule,
     NgtSphereGeometryModule,
+    NgtSobaFlyControlsModule,
   ],
 })
 export class InstancesComponentModule {}
