--- a/packages/demo/src/app/robot-expressive/robot-expressive.mdx
+++ b/packages/demo/src/app/robot-expressive/robot-expressive.mdx
@@ -5,54 +5,14 @@ This example is a port from [THREE.js Example](https://threejs.org/examples/#web
 - Apply `AnimationMixer`
 - Use `ngx-lil-gui` to control the Robot
 
-```html
-<!-- robot-expressive.component.html -->
-<ngt-canvas
-  (created)="$event.camera.lookAt(0, 2, 0)"
-  [shadows]="true"
-  [camera]="{ fov: 45, near: 0.25, far: 100, position: [-5, 5, 10] }"
-  [scene]="{ background: '#e0e0e0' | color, fog: ['#e0e0e0', 20, 100] | fog }"
->
-  <!--      stats-->
-  <ngt-stats></ngt-stats>
-
-  <!--      lights-->
-  <ngt-hemisphere-light
-    [args]="['#ffffff', '#444444']"
-    [position]="[0, 20, 0]"
-  ></ngt-hemisphere-light>
-  <ngt-directional-light
-    [args]="['#ffffff']"
-    [position]="[0, 20, 10]"
-    [castShadow]="true"
-  ></ngt-directional-light>
-
-  <!--    ground-->
-  <ngt-soba-plane
-    [args]="[2000, 2000]"
-    [rotation]="[-(0.5 | mathConst: 'PI'), 0, 0]"
-    [receiveShadow]="true"
-  >
-    <ngt-mesh-phong-material
-      [parameters]="{ color: '#ffffff', depthWrite: false }"
-    ></ngt-mesh-phong-material>
-  </ngt-soba-plane>
-  <ngt-grid-helper
-    #ngtGridHelper="ngtGridHelper"
-    (ready)="onGridHelperReady(ngtGridHelper.helper)"
-    [args]="[200, 40, '#000000', '#000000']"
-    [receiveShadow]="true"
-  ></ngt-grid-helper>
-
-  <!--      robot-->
-  <ngt-robot></ngt-robot>
-</ngt-canvas>
-<ngt-soba-loader></ngt-soba-loader>
-```
-
 ```ts
 // robot-expressive.component.ts
-import { NgtCoreModule } from '@angular-three/core';
+import {
+  NgtColorPipeModule,
+  NgtCoreModule,
+  NgtFogPipeModule,
+  NgtMathPipeModule,
+} from '@angular-three/core';
 import { NgtGridHelperModule } from '@angular-three/core/helpers';
 import {
   NgtDirectionalLightModule,
@@ -65,12 +25,58 @@ import { NgtSobaLoaderModule } from '@angular-three/soba/loaders';
 import { NgtSobaPlaneModule } from '@angular-three/soba/shapes';
 import { CommonModule } from '@angular/common';
 import { ChangeDetectionStrategy, Component, NgModule } from '@angular/core';
+import { NgxLilGuiModule } from 'ngx-lil-gui';
 import { GridHelper, Material } from 'three';
+import { RobotGuiComponent } from './robot-gui.component';
 import { RobotComponent } from './robot.component';
 
 @Component({
   selector: 'ngt-robot-expressive',
-  templateUrl: './robot-expressive.component.html',
+  template: `
+    <ngt-canvas
+      (created)="$event.camera.lookAt(0, 2, 0)"
+      [shadows]="true"
+      [camera]="{ fov: 45, near: 0.25, far: 100, position: [-5, 5, 10] }"
+      [scene]="{
+        background: '#e0e0e0' | color,
+        fog: ['#e0e0e0', 20, 100] | fog
+      }"
+    >
+      <!--      stats-->
+      <ngt-stats></ngt-stats>
+
+      <!--      lights-->
+      <ngt-hemisphere-light
+        [args]="['#ffffff', '#444444']"
+        [position]="[0, 20, 0]"
+      ></ngt-hemisphere-light>
+      <ngt-directional-light
+        [args]="['#ffffff']"
+        [position]="[0, 20, 10]"
+        [castShadow]="true"
+      ></ngt-directional-light>
+
+      <!--    ground-->
+      <ngt-soba-plane
+        [args]="[2000, 2000]"
+        [rotation]="[-(0.5 | mathConst: 'PI'), 0, 0]"
+        [receiveShadow]="true"
+      >
+        <ngt-mesh-phong-material
+          [parameters]="{ color: '#ffffff', depthWrite: false }"
+        ></ngt-mesh-phong-material>
+      </ngt-soba-plane>
+      <ngt-grid-helper
+        (ready)="onGridHelperReady($event)"
+        [args]="[200, 40, '#000000', '#000000']"
+        [receiveShadow]="true"
+      ></ngt-grid-helper>
+
+      <!--      robot-->
+      <ngt-robot></ngt-robot>
+    </ngt-canvas>
+    <ngt-soba-loader></ngt-soba-loader>
+  `,
   changeDetection: ChangeDetectionStrategy.OnPush,
 })
 export class RobotExpressiveComponent {
@@ -82,7 +88,7 @@ export class RobotExpressiveComponent {
 }
 
 @NgModule({
-  declarations: [RobotExpressiveComponent, RobotComponent],
+  declarations: [RobotExpressiveComponent, RobotComponent, RobotGuiComponent],
   exports: [RobotExpressiveComponent],
   imports: [
     NgtCoreModule,
@@ -95,28 +101,13 @@ export class RobotExpressiveComponent {
     NgtSobaLoaderModule,
     NgtPrimitiveModule,
     NgtStatsModule,
+    NgxLilGuiModule,
+    NgtColorPipeModule,
+    NgtFogPipeModule,
+    NgtMathPipeModule,
   ],
 })
 export class RobotExpressiveModule {}
-```
-
-```html
-<!-- robot.component.html -->
-<ng-container *ngIf="robot$ | async as robot">
-  <ngt-primitive
-    [object]="robot.scene"
-    (ready)="onReady(robot.scene, robot.animations)"
-    (animateReady)="onAnimateReady($event)"
-  ></ngt-primitive>
-
-  <ngt-robot-gui
-    [robot]="robot.scene"
-    [states]="states"
-    [emotes]="emotes"
-    [animationMixer]="animationMixer"
-    (act)="fadeToAction($event.state, $event.duration)"
-  ></ngt-robot-gui>
-</ng-container>
 ```
 
 ```ts
@@ -135,7 +126,23 @@ import {
 
 @Component({
   selector: 'ngt-robot',
-  templateUrl: './robot.component.html',
+  template: `
+    <ng-container *ngIf="robot$ | async as robot">
+      <ngt-primitive
+        [object]="robot.scene"
+        (ready)="onReady(robot.scene, robot.animations)"
+        (animateReady)="onAnimateReady($event)"
+      ></ngt-primitive>
+
+      <ngt-robot-gui
+        [robot]="robot.scene"
+        [states]="states"
+        [emotes]="emotes"
+        [animationMixer]="animationMixer"
+        (act)="fadeToAction($event.state, $event.duration)"
+      ></ngt-robot-gui>
+    </ng-container>
+  `,
   changeDetection: ChangeDetectionStrategy.OnPush,
 })
 export class RobotComponent {
