--- a/libs/storybook/src/introduction/docs/installation.stories.mdx
+++ b/libs/storybook/src/introduction/docs/installation.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from '@storybook/addon-docs';
+import { Meta } from "@storybook/addon-docs";
 
 <Meta title={'Introduction/Installation'} parameters={{ viewMode: 'docs' }} />
 
@@ -12,52 +12,40 @@ Make sure you check the compatibility table before installing the package.
 | -------------- | -------------------- | --------- |
 | all            | `@angular/core`      | `^13.0.0` |
 | all            | `rxjs`               | `^7.0.0`  |
-| all            | `three`              | `0.136`   |
+| all            | `three`              | `0.137`   |
 | soba           | `three-stdlib`       | `~2.6.1`  |
-| postprocessing | `postprocessing`     | `~6.23.2` |
-| cannon         | `cannon-es`          | `~0.18.0` |
+| postprocessing | `postprocessing`     | `~6.24.0` |
+| cannon         | `cannon-es`          | `~0.19.0` |
 | cannon         | `cannon-es-debugger` | `~1.0.0`  |
 
 ## Installation
 
-NGT is a collection of packages that provide different areas of THREE.js. To get started, you only need `@angular-three/core` and its `peerDependencies`
-
 ### Using `ng add`
 
-`@angular-three/core` provides `ng add` schematic to quickly add it to your project
-
 ```shell
-ng add @angular-three/core
+ng add @angular-three/schematics
 ```
 
 If you are using [Nx Dev Tools](https://nx.dev), use the following commands:
 
 ```shell
-npm install @angular-three/core
-npx nx generate @angular-three/core:init
+npm install --save-dev @angular-three/schematics
+npx nx generate @angular-three/schematics:init
 ```
 
 The schematic also turns `skipLibCheck` in the root `tsconfig.json` to `true`. This is required for other libraries' usage like: `soba` or `postprocessing` because their dependencies will fail strict type checking.
 
 ### Manual
 
-```shell
-npm install @angular-three/core
-#or yarn
-yarn add @angular-three/core
-```
-
-Manual installation also requires that the following `peerDependencies` are installed. You will need to install the THREE.js Library and its types:
+NGT is a collection of packages that provide different areas of THREE.js. To get started, you only need `@angular-three/core` and its `peerDependencies`
 
 ```shell
-npm install three@0.136
-npm install -D @types/three@0.136
-# or yarn
-yarn add three@0.136
-yarn add -D @types/three@0.136
-```
+npm install @angular-three/core three@0.137
+npm install --save-dev @types/three@0.137
+````
 
 > NGT will always try to stay on a version of THREE.js that has the corresponding typing definitions.
+> You can try to adjust the `three` version and its type-definition to the latest patch release: `0.137.x`
 
 ## Ecosystem
 
