chore(repo): add all contributors

--- a/libs/storybook/src/introduction/docs/installation.stories.mdx
+++ b/libs/storybook/src/introduction/docs/installation.stories.mdx
@@ -1,4 +1,4 @@
-import { Meta } from "@storybook/addon-docs";
+import { Meta } from '@storybook/addon-docs';
 
 <Meta title={'Introduction/Installation'} parameters={{ viewMode: 'docs' }} />
 
@@ -42,7 +42,7 @@ NGT is a collection of packages that provide different areas of THREE.js. To get
 ```shell
 npm install @angular-three/core three@0.137
 npm install --save-dev @types/three@0.137
-````
+```
 
 > NGT will always try to stay on a version of THREE.js that has the corresponding typing definitions.
 > You can try to adjust the `three` version and its type-definition to the latest patch release: `0.137.x`
