--- a/libs/storybook/src/cannon/kinematic-cube/kinematic-cube.mdx
+++ b/libs/storybook/src/cannon/kinematic-cube/kinematic-cube.mdx
@@ -1,4 +1,4 @@
-import { Story } from "@storybook/addon-docs";
+import { Story } from '@storybook/addon-docs';
 
 This is a fun example to showcase Physics with `@angular-three/cannon`
 
